--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     font-family: 'IBM Plex Mono', monospace;
     min-height: 100vh;
     /*Adding background image*/
-    background-image: url('https://github.com/Mahammad-Gurbanov/Our-website/blob/main/backgroundimage.png');
+    background-image: url('backgroundimage.png');
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
